# Scientific-Computing

./: .clang-format  .gitignore  .gitmodules  .sonar-project.properties  .travis.yml  CMakeLists.txt  ProducerConsumerThreads.sh  README.md
BasicCppThreads/: CMakeLists.txt  Output.md  Report.md  Timer.cpp  Timer.hpp  main.cpp
BasicMpi/: CMakeLists.txt  Configuration.sh  Report.md  TestThreads.sh  logs.txt  main.cpp
BasicMpi/include/: Mpi.hpp  Tasks.hpp
BasicMpi/include/MPI/: Communicator.hpp  Datatype.hpp  Environment.hpp
BasicMpi/include/MPI/impl/: CommunicatorImpl.hpp
BasicMpi/include/utils/: Primes.hpp
BasicMpi/src/: Tasks.cpp  main.cpp
BasicMpi/src/MPI/: Communicator.cpp  Datatype.cpp  Environment.cpp
BasicMpi/src/utils/: Primes.cpp
MPI/: CMakeLists.txt
MPI/include/: Communicator.hpp  Datatype.hpp  Environment.hpp  Mpi.hpp
MPI/include/impl/: Communicator.tpp
MPI/src/: Communicator.cpp  Datatype.cpp  Environment.cpp
ProducerConsumer/: CMakeLists.txt
ProducerConsumer/Mpi/: CMakeLists.txt  Configuration.sh  Report.md  Report2.md  Run.sh  TestThreads.sh  main.cpp
ProducerConsumer/Mpi/include/: CommonCommunicator.hpp  Consumer.hpp  Producer.hpp
ProducerConsumer/Mpi/include/impl/: CommonCommunicator.tpp  Consumer.tpp  Producer.tpp
ProducerConsumer/Mpi/logs/: comparison.ods  comparison.txt
ProducerConsumer/Threads/: CMakeLists.txt  Report.md
ProducerConsumer/Threads/include/: Dataflow.hpp
ProducerConsumer/Threads/include/dataflow/: Consumer.hpp  Producer.hpp  Queue.hpp
ProducerConsumer/Threads/include/forward/: queue_fwd.hpp
ProducerConsumer/Threads/include/impl/: Consumer.tpp  Producer.tpp  Queue.tpp
ProducerConsumer/Threads/include/interfaces/: IProducer.hpp
ProducerConsumer/Threads/include/utils/: Constants.hpp
ProducerConsumer/Threads/logs/: comparison.txt
ProducerConsumer/interfaces/: IConsumer.hpp  IProducer.hpp
ProducerConsumerThreads/: CMakeLists.txt  Report.md  RunAll.sh  comparison.ods  main.cpp
ProducerConsumerThreads/include/: Dataflow  Dataflow.hpp
ProducerConsumerThreads/include/dataflow/: Consumer.hpp  Producer.hpp  Queue.hpp
ProducerConsumerThreads/include/forward/: queue_fwd.hpp
ProducerConsumerThreads/include/impl/: Consumer.tpp  Producer.tpp  Queue.tpp
ProducerConsumerThreads/include/interfaces/: IConsumer.hpp  IProducer.hpp
ProducerConsumerThreads/include/utils/: Constants.hpp  Operators.hpp
ProducerConsumerThreads/logs/: comparison.txt
ProducerConsumerThreads/src/: CMakeLists.txt
ProducerConsumerThreads/src/dataflow/: Consumer.cpp  Producer.cpp  Queue.cpp
Test/: CMakeLists.txt  main.cpp
